--- a/src/app/auth/confirm-account/confirm-account.component.html
+++ b/src/app/auth/confirm-account/confirm-account.component.html
@@ -4,7 +4,7 @@
 
   <p>Clique no botão abaixo para confirmar sua conta</p>
 
-  <button class="btn-primary">Confirmar</button>
+  <button class="btn-primary" (click)="confirm()">Confirmar</button>
 
   <a routerLink="/auth/login" class="link">Já tem uma conta? Entrar</a>
 </app-auth-card>
