--- a/src/app/features/auth/components/auth-card/auth-card.component.scss
+++ b/src/app/features/auth/components/auth-card/auth-card.component.scss
@@ -4,6 +4,6 @@
   border-radius: 16px;
   background: rgba(255,255,255,0.03);
   backdrop-filter: blur(12px);
-  box-shadow: 0 0 12px rgba(0,0,0,0.3);
+  // box-shadow: 0 0 12px rgba(0,0,0,0.3);
   text-align: center;
 }
