--- a/src/app/features/dashboard/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/features/dashboard/dashboard-layout/dashboard-layout.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="actions">
-        <button class="btn ghost" (click)="abrirNovaTransacao()">+ Nova transação</button>
+        <button class="btn ghost" (click)="abrirTransacao()">+ Nova transação</button>
         <button class="btn primary">Criar meta</button>
         <button
           class="btn ghost visibility-toggle"
