--- a/src/app/features/dashboard/transacoes/transacoes.component.html
+++ b/src/app/features/dashboard/transacoes/transacoes.component.html
@@ -7,20 +7,20 @@
   <div style="font-size:12px; opacity:.6; margin-bottom:6px;">Total transações: {{ transactions.length }}</div>
 
   <div class="table">
-    <div class="row" *ngFor="let t of transactions; let i = index">
-      <div class="desc">{{ t.desc }}</div>
-      <div class="val">{{ t.value }}</div>
+    <div class="row" *ngFor="let transacao of transactions; let i = index">
+      <div class="desc">{{ transacao.desc }}</div>
+      <div class="val">{{ transacao.value }}</div>
     </div>
   </div>
 </section>
 
-<div class="modal-overlay" *ngIf="showNewTx">
+<div class="modal-overlay" *ngIf="mostrarNovaTransacao">
   <div class="modal">
     <h3>Nova Transação</h3>
     <label>Lugar</label>
-    <input [(ngModel)]="newTxDesc" placeholder="Ex: Padaria" />
+    <input [(ngModel)]="novaTransacaoDescricao" placeholder="Ex: Padaria" />
     <label>Valor (use apenas números ou R$  format)</label>
-    <input [(ngModel)]="newTxValue" placeholder="Ex: 230 ou 230.50" />
+    <input [(ngModel)]="novaTransacaoValor" placeholder="Ex: 230 ou 230.50" />
     <div style="display:flex; gap:8px; margin-top:12px; justify-content:flex-end;">
       <button class="btn ghost" (click)="fecharNovaTransacao()">Cancelar</button>
       <button class="btn primary" (click)="adicionarTransacao()">Salvar</button>
