--- a/src/app/features/dashboard/transacoes/transacoes.component.html
+++ b/src/app/features/dashboard/transacoes/transacoes.component.html
@@ -19,8 +19,17 @@
     <h3>Nova Transação</h3>
     <label>Descrição</label>
     <input [(ngModel)]="novaTransacaoDescricao" placeholder="Ex: Padaria" />
-    <label>Valor</label>
-    <input [(ngModel)]="novaTransacaoValor" placeholder="Ex: 230 ou 230.50" />
+
+    <div class="field-inline">
+      <label>Valor</label>
+      <div>
+        <input [(ngModel)]="novaTransacaoValor" placeholder="Ex: 230 ou 230.50" style="margin-right: 10px;"/>
+        <select [(ngModel)]="novaTransacaoTipo" class="type-select">
+          <option value="entrada">Entrada (+)</option>
+          <option value="saida">Saída (-)</option>
+        </select>
+      </div>
+    </div>
     <div style="display:flex; gap:8px; margin-top:12px; justify-content:flex-end;">
       <button class="btn ghost" (click)="fecharNovaTransacao()">Cancelar</button>
       <button class="btn primary" (click)="adicionarTransacao()">Salvar</button>
