--- a/src/app/features/dashboard/transacoes/transacoes.component.html
+++ b/src/app/features/dashboard/transacoes/transacoes.component.html
@@ -20,6 +20,9 @@
     <label>Descrição</label>
     <input [(ngModel)]="novaTransacaoDescricao" placeholder="Ex: Padaria" />
 
+    <label>Categoria</label>
+    <input [(ngModel)]="novaTransacaoCategoria" placeholder="Ex: Alimentação" />
+
     <div class="field-inline">
       <label>Valor</label>
       <div>
