Alterar e deletar transações

--- a/src/app/features/dashboard/home/home.component.html
+++ b/src/app/features/dashboard/home/home.component.html
@@ -87,7 +87,5 @@
 
 <app-transacoes
   [transactions]="transactions"
-  (add)="receberTransacaoFilha($event)"
-  (remove)="removerTransacao($event)"
-  (edit)="editarTransacao($event)">
+  (add)="receberTransacaoFilha($event)">
 </app-transacoes>
