--- a/src/app/features/dashboard/transacoes/transacoes.component.html
+++ b/src/app/features/dashboard/transacoes/transacoes.component.html
@@ -4,28 +4,42 @@
     <span>Transações</span>
   </div>
 
-  <div style="font-size:12px; opacity:.6; margin-bottom:6px;">Total transações: {{ transactions.length }}</div>
+  <div class="table-info">
+    Total transações: {{ transactions.length }}
+  </div>
 
   <div class="table">
     <div class="row" *ngFor="let transacao of pagedTransactions; let i = index">
       <div class="desc">{{ transacao.desc }}</div>
       <div class="val">{{ transacao.value }}</div>
+
+      <div class="actions" *ngIf="exibirAcoes">
+        <button class="btn tiny ghost" (click)="alterarTransacao(transacao, i)">
+          Editar
+        </button>
+        <button class="btn tiny danger" (click)="deletarTransacao(transacao, i)">
+          Excluir
+        </button>
+      </div>
     </div>
   </div>
 
   <mat-paginator
+    *ngIf="exibirPaginacao"
     [length]="transactions.length"
     [pageSize]="pageSize"
     [pageSizeOptions]="[10]"
     [pageIndex]="pageIndex"
     showFirstLastButtons
-    (page)="onPageChange($event)">
+    (page)="onPageChange($event)"
+  >
   </mat-paginator>
 </section>
 
 <div class="modal-overlay" *ngIf="mostrarNovaTransacao">
   <div class="modal">
     <h3>Nova Transação</h3>
+
     <label>Descrição</label>
     <input [(ngModel)]="novaTransacaoDescricao" placeholder="Ex: Padaria" />
 
@@ -34,15 +48,21 @@
 
     <div class="field-inline">
       <label>Valor</label>
-      <div>
-        <input [(ngModel)]="novaTransacaoValor" placeholder="Ex: 230 ou 230.50" style="margin-right: 10px;"/>
+      <div class="field-inline-content">
+        <input
+          [(ngModel)]="novaTransacaoValor"
+          placeholder="Ex: 230 ou 230.50"
+          class="value-input"
+        />
+
         <select [(ngModel)]="novaTransacaoTipo" class="type-select">
           <option value="entrada">Entrada (+)</option>
           <option value="saida">Saída (-)</option>
         </select>
       </div>
     </div>
-    <div style="display:flex; gap:8px; margin-top:12px; justify-content:flex-end;">
+
+    <div class="modal-actions">
       <button class="btn ghost" (click)="fecharNovaTransacao()">Cancelar</button>
       <button class="btn primary" (click)="adicionarTransacao()">Salvar</button>
     </div>
